# time-away

./: .env  .gitignore  GLOBAL_PTO_GUIDE.md  example.txt  package-lock.json  pyproject.toml  sss.py  test.py  test_sched.py  test_schedule.py
artifacts/: pto_month_schedule.json  pto_scheduler_test_results.json
client/src/: App.tsx
client/src/components/: Layout.tsx  TeamManagement.tsx
client/src/data/: mockData.ts
client/src/types/: index.ts
db/: connect.py  populate.py
idea_generator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
server/: PLANSTORE_USAGE.md  api_server.py  pyproject.toml
server/src/: __init__.py
server/src/db/: connect.py  helper_functions.py
server/src/pydantic_types/: state_types.py
server/src/search/: __init__.py  _search.py  mcp_client_local.py  mcp_search.py  pto_tools.py  server.py  test_mcp_server.py  test_schedule.py
server/src/search/test/: global_pto_demo.py  test_horizon_scheduler.py  test_main.py  test_mcp_connections.py  test_mcp_demo.py  test_mcp_simple.py
src/: __init__.py  sss.py  test_schedule.py
src/data/: weekly_schedule.json
src/db/: connect.py  helper_functions.py  populate.py
src/search/: _search.py  mcp_search.py  test_schedule.py
src/search/data/: test-schedule.json
src/search/test/: test_horizon_scheduler.py
