[project]
name = "idea-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "pandas>=2.3.2",
    "scrapy>=2.13.3",
    "pydantic>=2.11.9",
    "pymongo>=4.15.1",
"google-generativeai>=0.8.2",
"mcp>=1.10.0",
"python-dotenv>=1.0.1",
"pytest>=7.0.0",
"mongomock>=4.1.0",
"faker>=19.0.0"
]
[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
